fix: body overflow. (halo-dev/console#293)

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -2,7 +2,7 @@
 @import './style.less';
 
 body {
-  overflow-y: scroll;
+  overflow-y: overlay;
   padding: 0 !important;
 }
 
